[2단계 - 경로 조회 기능] 제이미(임정수) 미션 제출합니다. (#195)
* refactor: 패키지 분리 및 이동

보다 적절한 패키지로 이동

* refactor: SectionStationMapper 엔티티 생성

- 엔티티 생성으로 변화된 타입 및 로직 수정

* refactor: Sections sort 메서드 분리

* refactor: Domain, Entity 동등성 재정의 및 toString 재정의

* fix: 오류 발생 테스트 문제 해결

- LineResponse와 LineSectionResponse 분리

* refactor: schema section 필드 추가

* test: SectionDao 단위 테스트 추가

* refactor: LineDao NamedParameterJdbcTemplate로 변경

* refactor: SectionDao SimpleJdbcInsert 수정

* test: LineDao 단위 테스트 추가

* refactor: Station을 도메인과 엔티티로 분리

* test: LineDao 테스트 조건 수정

* refactor: exception 네이밍 변경

LineDuplicatedException -> DuplicatedException

* test: StationDao 단위 테스트 추가

* refactor: Section 필드에 id 추가

* refactor: 역 추가에 대한 로직을 서비스에서 Sections로 이동

* test: 추가적인 SectionDao 단위 테스트 추가

* refactor: 역 제거 대한 로직을 서비스에서 Sections로 이동

* refactor: 기타 컨벤션 적용

* test: 삭제 인수 테스트 추가

* docs: 경로 조회 api 추가

* refactor: 프로덕션과 테스트 데이터베이스 분리

* feat: 최단 경로 조회 기능 추가

* feat: 데이터 초기값 파일 설정 추가

* feat: 경로와 거리를 담는 path 생성

* docs: 2단계 기능 목록 추가 및 완료 사항 체크

* feat: 지하철 요금 계산 및 조회 기능 추가

* refactor: 코드 컨벤션 적용

* test: SectionDao 단위 테스트 추가 및 컨벤션 적용

* test: StationDao 단위 테스트 추가 및 컨벤션 적용

* refactor: LineDaoTest, SectionDaoTest given-when-then 패턴 적용

* test: 테스트 초기 정보 수정

* fix: 역 정렬 잘못된 로직 수정

* test: LineDaoTest 초기 정보 수정

* refactor: 정적팩토리메서드로 객체 생성

* test: LineService 단위 테스트 추가

* feat: 누락된 fare 파일 추가

* refactor: 중복 코드 제거

* refactor: 중복되는 상수들 TestFeature로 묶음

* test: Sections 단위 테스트 추가

* test: Map 단위 테스트 추가

* test: Fare 단위 테스트 추가

* test: PathService 단위 테스트 추가

* test: SectionService 단위 테스트 추가

* docs: 완료한 기능 목록 체크

* test: StationService 단위 테스트 추가

* refactor: SQLException GlobalExceptionHandler로 통합

* refactor: 주석 제거

* feat: MethodArgumentNotValidException에 대한 예외 처리 추가

* test: Line 통합 테스트 추가

* test: StationController 단위 테스트 추가

* test: SectionController 단위 테스트 추가

* test: PathController 단위 테스트 추